@@ -7,6 +7,7 @@
     - Enable screenshots
     - Allow spaces and '=' in INI file entries
     - Enable save and demo file deletion
+    - Don't allow duplicate player names
 
 * 0.11
     - Added berusky2-data install script
